# storied-life

./: .gitignore  ARCHITECTURE.md  AUTH.md  CONTRIBUTING.md  DOCKER_DEVELOPMENT.md  LICENSE  Makefile  OIDC_SETUP_GUIDE.md  PROJECT.md  README.md  SETUP.md  STACK_SEPARATION_SUMMARY.md  STATUS_REPORT.md  VISION.md  docker-compose.dev.yml  docker-compose.yml  env.example  infrastructure-compose.dev.yml  infrastructure-compose.yml  package-lock.json
authentik/: README.md
backend/: .uvignore  Dockerfile  Dockerfile.dev  UV_MIGRATION.md  main.py  migrate_to_uv.sh  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  legacies.py  memorials.py  stories.py  users.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/services/: auth_service.py  oidc_auth.py  user_service.py
backend/migrations/: 001_add_external_id_to_users.sql  002_remove_password_for_oidc.sql
backend/scripts/: run_auth_tests.py  validate_oidc_config.py
backend/tests/: test_oidc_auth.py
database/init/: 01-init.sql
deploy/: Makefile  README.md  app-stack.yaml  bastion-stack.yaml  cloudformation.yaml  rds-stack.yaml  vpc-stack.yaml
docs/: README.md
frontend/: Dockerfile  Dockerfile.dev  NVM_USAGE.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: nvm-exec.sh  setup-dev.sh
frontend/src/: App.tsx  debug-login.html  index.css  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx
frontend/src/components/Auth/: LoginButton.tsx  LoginCallback.tsx  LogoutButton.tsx  UserProfile.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: auth.ts
infrastructure/authentik/init/: 01-init-authentik-dev.sql  01-init-authentik.sql
litellm/: config.yaml
scripts/: application.sh  dev-containerized.sh  infrastructure.sh  setup.sh  stack.sh
traefik/: dynamic.yml
traefik/config/: tls-config.yml
